--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "test": "grunt test"
   },
+  "dependencies": {
+    "grunt-cli": "~0.1.5",
+    "grunt": "~0.4.0"
+  },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-qunit": "~0.1.1",
@@ -15,6 +19,7 @@
     "grunt-contrib-watch": "~0.2.0",
     "grunt-contrib-clean": "~0.4.0",
     "grunt": "~0.4.0",
+    "grunt-cli": "~0.1.5",
     "grunt-contrib-connect": "~0.2.0"
   }
 }
